@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-07-17T00:56:19Z",
-  "count" : 298,
+  "timestamp" : "2023-07-30T00:45:12Z",
+  "count" : 271,
   "count_minmax" : [ 110, 298 ],
-  "count_decinc" : [ -0, +298 ],
+  "count_decinc" : [ -27, +298 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
