@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2023-07-29T16:08:28Z",
-  "count_outdated" : 143731,
-  "uniques_outdated" : 1574,
-  "count" : 148128,
+  "timestamp" : "2023-07-30T00:45:12Z",
+  "count_outdated" : 144029,
+  "uniques_outdated" : 1576,
+  "count" : 148223,
   "uniques" : 1611,
   "clones" : [
     {
-      "timestamp": "2023-07-15T00:00:00Z",
-      "count": 40,
-      "count_minmax": [ 40, 298 ],
-      "count_decinc": [ 258, 298 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
-    {
       "timestamp": "2023-07-16T00:00:00Z",
-      "count": 298,
+      "count": 271,
       "count_minmax": [ 110, 298 ],
-      "count_decinc": [ 0, 298 ],
+      "count_decinc": [ 27, 298 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2023-07-29T00:00:00Z",
-      "count": 206,
-      "count_minmax": [ 112, 206 ],
-      "count_decinc": [ 0, 206 ],
+      "count": 301,
+      "count_minmax": [ 112, 301 ],
+      "count_decinc": [ 0, 301 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
