@@ -1,15 +1,10 @@
 {
-  "count": 4139,
+  "count": 4167,
   "uniques": 5,
   "clones": [
     {
-      "timestamp": "2023-07-15T00:00:00Z",
-      "count": 40,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-07-16T00:00:00Z",
-      "count": 298,
+      "count": 271,
       "uniques": 2
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2023-07-29T00:00:00Z",
-      "count": 206,
+      "count": 301,
       "uniques": 2
     }
   ]
